get one transaction by id